--- a/style.css
+++ b/style.css
@@ -2,15 +2,83 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: black;
+    color: white;
+    font-family: 'Courier New', monospace;
   }
+
+.row {
+    display: flex;
+    flex-direction: row;
+    margin-left: 100px;
+    margin-top: 20px;
+}
+
+.top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
 
 #movie-area {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    height:100%;
+    position:relative;
+}
+
+#submit {
+    margin-right: 20px;
+    margin-left: 20px;
+    border: 1px solid white;
+    height: 50px;
+    width: 100px;
+}
+
+#reset {
+    border: 1px solid white;
+    height: 50px;
+    width: 100px;
+}
+form input[type=text] {
+    margin-left: 20px;
+    padding-right: 50px;
+    height: 50px;
+    border: 1px solid white;
 }
 
 .myMovie {
     width: 500px;
+}
+
+.hidden {
+    display: none;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.top {
+    padding-bottom: 20px;
+    justify-content: space-between;
+}
+
+#header {
+    margin-left: 5px;
+    font-size: 75px;
+}
+
+body {
+    font-family: 'Courier New', monospace;
+  }
+
+h1 {
+    font-weight: normal;
 }
